--- a/SocialBookApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/SocialBookApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -44,7 +44,7 @@
             <p>{{ user.interests}}</p>
           </tab>
           <tab heading="Photos">
-            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
           </tab>
           <tab heading="Messages">
             <h4>Messages will go here</h4>
